--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-countdown-circle-timer": "^3.0.8",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
